    Maven plugin. (Sharmarke Aden via tomwhite)

    AVRO-1202. Java & Python: Add "Getting Started" guides.
    (Skye Wanderman-Milne via cutting)

    AVRO-1205. Java: Add stereotype annotation to generated classes.
    All classes generated by the specific compiler now have the
    annotation org.apache.avro.specific.AvroGenerated.
    (Sharmarke Aden via cutting)

  IMPROVEMENTS

    AVRO-1169. Java: Reduce memory footprint of resolver.
    (Hernan Otero via cutting)

    AVRO-1183. Java: Provide a better error message when the schema
    for a Pair cannot be inferred. (cutting)

    AVRO-1207. Java: Add tests for Maven plugins. (Sharmarke Aden via cutting)

    AVRO-1210. Java: Fix mistakes in AvroMultipleOutputs error messages.
    (Dave Beech via cutting)

    AVRO-1178. Java: Fix typos in parsing document.
    (Martin Kleppmann via cutting)

  BUG FIXES

    AVRO-1171. Java: Don't call configure() twice on mappers & reducers.
    (Dave Beech via cutting)

    AVRO-1170. Java: Avro's new mapreduce APIs don't work with Hadoop 2.
    (tomwhite)

    AVRO-1197. Java: Expose mapreduce tests so that 'maven install'
    works correctly.  (Mike Percy via cutting)

    AVRO-1200. DatumWriter can write malformed data if collection is
    modified during write. (tomwhite)

    AVRO-1199. Java: Fix SortedKeyValueFile to copy the key used to
    compare against next.  Also improve GenericData#deepCopy() to be
    generic, so that its return type matches its parameter type. (cutting)

    AVRO-1201. Java: Fix GenericData#toString() to generate valid JSON for
    enum values. (Sharmarke Aden via cutting)

    AVRO-1206. Ruby: Fix UTF-8 handling in Ruby 1.9.
    (Nicolas Fouché via cutting)

    AVRO-1177. Ruby: Fix RPC to only send handshake for first request
    over a connection.  (Georg Franz via cutting)

    AVRO-1175. Java: Clear thread local reference in BinaryData#compare().
    (cutting)

Avro 1.7.2 (20 October 2012)

  NEW FEATURES
