@@ -85,6 +85,8 @@ public class IDLProtocolMojo extends AbstractAvroMojo {
       SpecificCompiler compiler = new SpecificCompiler(protocol);
       compiler.setStringType(GenericData.StringType.valueOf(stringType));
       compiler.setTemplateDir(templateDirectory);
+      compiler.setFieldVisibility(getFieldVisibility());
+      compiler.setCreateSetters(createSetters);
       compiler.compileToDestination(null, outputDirectory);
     } catch (ParseException e) {
       throw new IOException(e);
