@@ -58,6 +58,8 @@ public class ProtocolMojo extends AbstractAvroMojo {
     SpecificCompiler compiler = new SpecificCompiler(protocol);
     compiler.setTemplateDir(templateDirectory);
     compiler.setStringType(StringType.valueOf(stringType));
+    compiler.setFieldVisibility(getFieldVisibility());
+    compiler.setCreateSetters(createSetters);
     compiler.compileToDestination(src, outputDirectory);
   }
 
